--- a/Frontend-angular14/src/index.html
+++ b/Frontend-angular14/src/index.html
@@ -11,7 +11,7 @@
       
   </head>
   <body>
-    <div class="container-fluid"><app-root></app-root></div>
+    <app-root></app-root>
     
   </body>
 
